# bankfetch

./: .env.example  .gitignore  .pre-commit-config.yaml  Justfile  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/bankfetch/: __init__.py  auth.py  cli.py  client.py  config.py  export.py
src/bankfetch/parsers/: __init__.py  generic.py  mediolanum.py
tests/: conftest.py  test_auth.py  test_client.py  test_export.py
